# Futureboard

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  package.json  vercel.json  version.json
.github/workflows/: build-desktop.yml  daily-build.yml
apps/electron/: .gitignore  package.json
apps/electron/scripts/: build-plugin-host.mjs  copy-native-audio.mjs
apps/electron/src/: main.ts  preload.ts  updater.ts
apps/electron/src/ipc/: channels.ts
apps/electron/src/native-audio/: NativeSphereAudioService.ts  SphereAudioNative.ts  ipc-handlers.ts
apps/electron/src/native-plugin/: PluginHostNative.ts  plugin-scanner-worker.ts
apps/experimental/native/src/: audio_state.rs  main.rs
apps/native/: .gitignore  CMakeLists.txt  Cargo.toml  build.ts  package.json
apps/native/include/: MochiDawLayout.hpp
apps/native/shared/: resources.xml
apps/native/src/: main.cpp  main.rs  window.rs
apps/web/: package.json
apps/web/scripts/: build-wasm-audio.mjs
apps/web/src/: App.tsx  main.tsx
apps/web/src/audio/: AudioCacheManager.ts  AudioProcessingService.ts  RustDspProcessor.ts  audioCacheKeys.ts  audioCacheTypes.ts
apps/web/src/audio/dsp/: pitchShift.ts  timeStretch.ts
apps/web/src/commands/: index.ts
apps/web/src/components/: AddTrackDialog.tsx  BrowserPanel.tsx  EffectEditorRack.tsx  InspectorPanel.tsx  MidiEditorPanel.tsx  MixerPanel.tsx  PerfMonitor.tsx  StatusBar.tsx  TransportBar.tsx
apps/web/src/components/plugins/: AudioPluginManager.tsx  nativePluginEditorLifecycle.ts
apps/web/src/components/project/: ProjectDropdown.tsx  ProjectWizard.tsx
apps/web/src/components/settings/: SettingsDialog.tsx
apps/web/src/components/timeline/: AudioClip.tsx  CanvasVUMeter.tsx  MidiClip.tsx  Playhead.tsx  Timeline.tsx  TimelineGrid.tsx  TimelineRuler.tsx  TrackHeader.tsx  TrackLane.tsx  WaveformCanvas.tsx  timelineGpuGridRenderer.ts  timelineGpuPlayheadRenderer.ts
apps/web/src/engine/: AudioAssetManager.ts  AudioEngine.ts  AudioImportQueue.ts  ClipScheduler.ts  MetronomeScheduler.ts  Mixer.ts  Transport.ts  WasmAudioEngineAdapter.ts  WaveformGenerator.ts  WebAudioEngineAdapter.ts  activeAudioEngine.ts
apps/web/src/hooks/: useKeyboardShortcuts.ts
apps/web/src/menu/: actionRunner.ts
apps/web/src/platform/: dawBridge.types.ts  platform.electron.ts  platform.types.ts  platform.web.ts
apps/web/src/store/: meterStore.ts  projectStore.ts  settingsStore.ts  uiStore.ts  windowStore.ts
apps/web/src/styles/: index.css
apps/web/src/types/: daw.ts
apps/web/src/utils/: dialogWindows.ts  importAudioToProject.ts  normalize.ts  projectLifecycle.ts
apps/web/src/workers/: waveformWorker.ts
crates/SphereAudioEditor/: Cargo.toml
crates/SphereDirectAudioEngine/src/: command.rs  engine.rs  error.rs  lib.rs  native.rs  runtime.rs  types.rs  vst3_processor.rs
crates/SphereDirectAudioEngine/src/backend/: render.rs  wasapi_exclusive.rs
crates/SphereDirectAudioEngine/src/dsp/: gain.rs  meter.rs
crates/SphereDirectAudioEngine/src/graph/: master.rs  track.rs
crates/SphereDirectAudioEngine/vst3bridge/include/: sphere_daux_vst3_processor.h
crates/SphereDirectAudioEngine/vst3bridge/src/: vst3_processor.cpp
crates/SphereEncoder/: Cargo.toml
crates/SphereExtentionHost/: Cargo.toml
crates/SphereMediaUtils/: Cargo.toml
crates/SphereNoiseRemover/: Cargo.toml
crates/SpherePluginHost/: Cargo.toml
crates/SpherePluginHost/src/: editor_quirk.rs  lib.rs  native_editor.rs  plugin_db.rs  preset.rs  registry.rs  types.rs
crates/SpherePluginHost/vst3backend/src/: plugin_editor_window.cpp
crates/SphereSettings/: Cargo.toml
crates/SphereStemExtractor/: Cargo.toml
crates/SphereUIComponents/: Cargo.toml
crates/SphereUIComponents/src/: assets.rs  embedded_assets.rs  layout.rs  lib.rs  menu.rs  native_macos_menu.rs  overlay.rs  paths.rs  perf.rs  platform_chrome.rs  settings.rs  theme.rs
crates/SphereUIComponents/src/components/: add_track_dialog.rs  app_chrome.rs  bottom_panel.rs  combo_box.rs  context_menu.rs  controls.rs  fader.rs  file_browser.rs  icon.rs  icon_button.rs  knob.rs  menu_bar.rs  menu_dropdown.rs  midi_editor_window.rs  mixer_panel.rs  mod.rs  panel.rs  piano_roll.rs  plugin_editor_window.rs  plugin_manager.rs  plugin_picker.rs  project_switcher.rs  project_wizard.rs  settings_dialog.rs  settings_layout.rs  sidebar.rs  slider.rs  status_bar.rs  text_input.rs  title_bar.rs
crates/SphereUIComponents/src/project/: format.rs  io.rs  mod.rs  recent.rs
crates/SphereVoiceTune/: Cargo.toml
frameworks/SphereAudioPlugins/: Cargo.toml
frameworks/SphereDirectAudioEngine/: Cargo.toml
frameworks/SphereDirectAudioEngine/src/: audio_file.rs  command.rs  engine.rs  lib.rs  recording.rs  runtime.rs  types.rs  vst3_processor.rs
frameworks/SphereDirectAudioEngine/src/backend/: cpal_backend.rs  mod.rs  render.rs  wasapi_exclusive.rs
frameworks/SphereDirectAudioEngine/vst3bridge/include/: sphere_daux_vst3_processor.h
frameworks/SphereDirectAudioEngine/vst3bridge/src/: vst3_processor.cpp
frameworks/SpherePluginHost/: Cargo.toml  build.rs
frameworks/SpherePluginHost/src/: lib.rs
frameworks/SpherePluginHost/vst3backend/include/: sphere_plugin_host_vst3.h
frameworks/SpherePluginHost/vst3backend/src/: plugin_editor_window.cpp
frameworks/SphereWebAudioCore/src/: wasm_api.rs
frameworks/SphereWebAudioCore/src/dsp/: granular.rs  pitch.rs
packaging/aur/: .SRCINFO  PKGBUILD
plugins/Equz8/Editor/: PluginEditor.tsx
plugins/UltraVerb/Editor/: PluginEditor.tsx
scripts/: sync-version.mjs
tasks/: 002-WaveformCache.txt  README.txt
tasks/bridge/: 999-AudioEngine.txt
tasks/native/: 000-ReWriteAll.txt  midi-phase2-engine-playback.md  plugin-insert-routing.md  plugin-pipeline-checklist.md  plugin-view-native-editor.md
tasks/native/settings/: 001-spec.md  002-implementation-steps.md  README.md  architecture.md  dialog_ui.md
tasks/webapp/: 001-Plugins.txt  003-LinkMenuBar.txt  004-WindowingSystem.txt  005-ProjectDropdown.txt  006-DawSystem.txt  007-TouchScreenSupport.txt
(+32 files in other folders)
